syntax = "proto3";

package lang.meta.internal.semanticdb.schema;

message Database {
  repeated SourceFile files = 1;
}

message SourceFile {
  reserved 1;
  reserved 5;
  string filename = 9;
  string contents = 8;
  string language = 7;
  repeated ResolvedName names = 2;
  repeated Message messages = 3;
  repeated ResolvedSymbol symbols = 4;
  repeated Synthetic synthetics = 6;
}

message ResolvedName {
  Position position = 1;
  string symbol = 2;
  bool is_binder = 3;
}

message Position {
  int32 start = 2;
  int32 end = 3;
}

message Message {
  enum Severity {
    UNKNOWN = 0;
    INFO = 1;
    WARNING = 2;
    ERROR = 3;
  }
  Position position = 1;
  Severity severity = 2;
  string text = 3;
}

message ResolvedSymbol {
  string symbol = 1;
  Definition definition = 2;
}

message Definition {
  int64 flags = 1;
  string name = 2;
  string signature = 3;
  repeated ResolvedName names = 4;
}

message Synthetic {
  Position pos = 1;
  string text = 2;
  repeated ResolvedName names = 3;
}